--- a/test/fixtures/organizers.yml
+++ b/test/fixtures/organizers.yml
@@ -1,5 +1,23 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+# == Schema Information
+#
+# Table name: organizers
+#
+#  id           :integer          not null, primary key
+#  company_name :string           not null
+#  description  :text
+#  email        :string           not null
+#  name         :string           not null
+#  phone        :string
+#  website      :string
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
+# Indexes
+#
+#  index_organizers_on_email  (email) UNIQUE
+#
 one:
   name: MyString
   email: MyString
